CMAKE_MINIMUM_REQUIRED(VERSION 3.18.1 FATAL_ERROR)
PROJECT(FastCAE)

#Set FastCAE Dependencies Libraries Path
#Qt5
SET(Qt5_DIR "FASTCAE_Qt5Config.cmake-NOTFOUND" CACHE PATH "Qt5_DIR")

#VTK
SET(FASTCAE_VTK_INCLUDE "FASTCAE_VTK_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_VTK_INCLUDE")
SET(FASTCAE_VTK_LIBDIR "FASTCAE_VTK_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_LIBDIR")
SET(FASTCAE_VTK_LIBDDIR "FASTCAE_VTK_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_LIBDDIR")
SET(FASTCAE_VTK_BINDIR "FASTCAE_VTK_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_BINDIR")
SET(FASTCAE_VTK_BINDDIR "FASTCAE_VTK_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_BINDDIR")

#OCC

SET(FASTCAE_OCC_INCLUDE "FASTCAE_OCC_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_OCC_INCLUDE")
SET(FASTCAE_OCC_LIBDIR "FASTCAE_OCC_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_LIBDIR")
SET(FASTCAE_OCC_LIBDDIR "FASTCAE_OCC_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_LIBDDIR")
SET(FASTCAE_OCC_BINDIR "FASTCAE_OCC_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_BINDIR")
SET(FASTCAE_OCC_BINDDIR "FASTCAE_OCC_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_BINDDIR")

#CGNS
SET(FASTCAE_CGNS_INCLUDE "FASTCAE_CGNS_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_CGNS_INCLUDE")
SET(FASTCAE_CGNS_LIBDIR "FASTCAE_CGNS_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_LIBDIR")
SET(FASTCAE_CGNS_LIBDDIR "FASTCAE_CGNS_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_LIBDDIR")
SET(FASTCAE_CGNS_BINDIR "FASTCAE_CGNS_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_BINDIR")
SET(FASTCAE_CGNS_BINDDIR "FASTCAE_CGNS_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_BINDDIR")

#为了方便默认赋值
SET(Qt5_DIR "C:\\Qt\\Qt5.14.2\\5.14.2\\msvc2017_64\\lib\\cmake\\Qt5")

SET(FASTCAE_VTK_INCLUDE "D:/FastCAE/VTK/include/vtk-9.0")
SET(FASTCAE_VTK_LIBDDIR "D:\\FastCAE\\VTK\\libd")
SET(FASTCAE_VTK_LIBDIR "D:/FastCAE/VTK/lib")

SET(FASTCAE_OCC_INCLUDE "D:/FastCAE/OCC/inc")
SET(FASTCAE_OCC_LIBDDIR "D:\\FastCAE\\OCC\\win64\\vc14\\libd")
SET(FASTCAE_OCC_LIBDIR "D:\\FastCAE\\OCC\\win64\\vc14\\lib")

SET(FASTCAE_CGNS_INCLUDE "D:\\FastCAE\\cgns\\include")
SET(FASTCAE_CGNS_LIBDDIR "D:\\FastCAE\\cgns\\libd")
SET(FASTCAE_CGNS_LIBDIR "D:\\FastCAE\\cgns\\lib")

IF(FASTCAE_VTK_LIBDDIR STREQUAL "FASTCAE_VTK_LIBDDIR-NOTFOUND")
	MESSAGE(FATAL_ERROR "FASTCAE_VTK_LIBDDIR is null, please specified VTK libraries directory!~")
ELSE()
	IF(EXISTS ${FASTCAE_VTK_LIBDDIR})
		IF(EXISTS ${FASTCAE_VTK_LIBDDIR}/vtkChartsCore-9.0d.lib)
			MESSAGE(STATUS "FASTCAE_VTK_LIBDDIR path is right")
		ELSE()
			MESSAGE(FATAL_ERROR "FASTCAE_VTK_LIBDDIR path is error, please reassign path")
		ENDIF()
	ELSE()
		MESSAGE(FATAL_ERROR "FASTCAE_VTK_LIBDDIR path is not exist, please reassign path")
	ENDIF()
ENDIF()

FILE(GLOB FASTCAE_VTK_LIBDS "${FASTCAE_VTK_LIBDDIR}/*.lib")
FILE(GLOB FASTCAE_VTK_LIBS "${FASTCAE_VTK_LIBDIR}/*.lib")	
FILE(GLOB FASTCAE_OCC_LIBDS "${FASTCAE_OCC_LIBDDIR}/*.lib")	
FILE(GLOB FASTCAE_OCC_LIBS "${FASTCAE_OCC_LIBDIR}/*.lib")	
FILE(GLOB FASTCAE_CGNS_LIBDS "${FASTCAE_CGNS_LIBDDIR}/*.lib")	
FILE(GLOB FASTCAE_CGNS_LIBS "${FASTCAE_CGNS_LIBDIR}/*.lib")		

SET(CMAKE_DEBUG_POSTFIX "")
SET(CMAKE_RELEASE_POSTFIX "")
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)
SET(TOP_PROJECT_BINARY_DIR ${PROJECT_BINARY_DIR})
SET(TOP_PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR})
SET(QF_QRC_FILE "${TOP_PROJECT_SOURCE_DIR}/qrc/qianfan.qrc")
SET(TRAN_QRC_FILE "${TOP_PROJECT_SOURCE_DIR}/qrc/translations.qrc")
SET(QF_RC_FILE "${TOP_PROJECT_SOURCE_DIR}/qrc/qianfan.rc")
FIND_PACKAGE(Qt5 COMPONENTS Core LinguistTools REQUIRED)

ADD_SUBDIRECTORY(SolutionDataIO)
ADD_SUBDIRECTORY(CurveAnalyse)
ADD_SUBDIRECTORY(HeuDataSrcIO)
ADD_SUBDIRECTORY(GraphicsAnalyse)
ADD_SUBDIRECTORY(XGenerateReport)
ADD_SUBDIRECTORY(settings)
ADD_SUBDIRECTORY(License)
ADD_SUBDIRECTORY(python)
ADD_SUBDIRECTORY(UserGuidence)
ADD_SUBDIRECTORY(DataProperty)
ADD_SUBDIRECTORY(meshData)
ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(BCBase)
ADD_SUBDIRECTORY(SelfDefObject)
ADD_SUBDIRECTORY(Material)
ADD_SUBDIRECTORY(ConfigOptions)
ADD_SUBDIRECTORY(ParaClassFactory)
ADD_SUBDIRECTORY(ModelData)
ADD_SUBDIRECTORY(moduleBase)
ADD_SUBDIRECTORY(PluginManager)
ADD_SUBDIRECTORY(PostWidgets)
ADD_SUBDIRECTORY(GeometryDataExchange)
ADD_SUBDIRECTORY(GeometryCommand)
ADD_SUBDIRECTORY(GeometryWidgets)
ADD_SUBDIRECTORY(Gmsh)
ADD_SUBDIRECTORY(ProjectTree)
ADD_SUBDIRECTORY(ProjectTreeExtend)
ADD_SUBDIRECTORY(IO)
ADD_SUBDIRECTORY(SolverControl)
ADD_SUBDIRECTORY(MainWidgets)
ADD_SUBDIRECTORY(MainWindow)
ADD_SUBDIRECTORY(main)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
SET_PROPERTY(TARGET SolutionDataIO PROPERTY FOLDER "Post")
SET_PROPERTY(TARGET CurveAnalyse PROPERTY FOLDER "Post")
SET_PROPERTY(TARGET HeuDataSrcIO PROPERTY FOLDER "Post")
SET_PROPERTY(TARGET GraphicsAnalyse PROPERTY FOLDER "Post")
SET_PROPERTY(TARGET XGenerateReport PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET Settings PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET License PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET PythonModule PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET UserGuidence PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET DataProperty PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET MeshData PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET Geometry PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET BCBase PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET SelfDefObject PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET Material PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET ConfigOptions PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET ParaClassFactory PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET ModelData PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET ModuleBase PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET PluginManager PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET PostWidgets PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET GeometryDataExchange PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET GeometryCommand PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET GeometryWidgets PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET GmshModule PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET ProjectTree PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET ProjectTreeExtend PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET IO PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET SolverControl PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET MainWidgets PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET MainWindow PROPERTY FOLDER "FastCAE Platform")
SET_PROPERTY(TARGET FastCAE PROPERTY FOLDER "FastCAE Platform")
#SET_PROPERTY(TARGET project PROPERTY FOLDER "Plugin")