CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0 FATAL_ERROR)
PROJECT(FastCAE)

SET(Qt5_DIR "Qt5Config.cmake-NOTFOUND" CACHE PATH "Qt5_DIR")
SET(FASTCAE_VTK_INCLUDE "FASTCAE_VTK_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_VTK_INCLUDE")
SET(FASTCAE_OCC_INCLUDE "FASTCAE_OCC_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_OCC_INCLUDE")
SET(FASTCAE_CGNS_INCLUDE "FASTCAE_CGNS_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_CGNS_INCLUDE")
SET(FASTCAE_QUAZIP_INCLUDE "FASTCAE_QUAZIP_INCLUDE-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_INCLUDE")

IF(Qt5_DIR STREQUAL "Qt5_DIR-NOTFOUND")		
	MESSAGE(SEND_ERROR "Qt5_DIR is null, please specified Qt5Config.cmake location!~")
ENDIF()
IF(FASTCAE_VTK_INCLUDE STREQUAL "FASTCAE_VTK_INCLUDE-NOTFOUND")		
	MESSAGE(SEND_ERROR "FASTCAE_VTK_INCLUDE is null, please specified VTK include directory!~")
ENDIF()
IF(FASTCAE_OCC_INCLUDE STREQUAL "FASTCAE_OCC_INCLUDE-NOTFOUND")		
	MESSAGE(SEND_ERROR "FASTCAE_OCC_INCLUDE is null, please specified OCC include directory!~")
ENDIF()
IF(FASTCAE_CGNS_INCLUDE STREQUAL "FASTCAE_CGNS_INCLUDE-NOTFOUND")		
	MESSAGE(SEND_ERROR "FASTCAE_CGNS_INCLUDE is null, please specified CGNS include directory!~")
ENDIF()
IF(FASTCAE_QUAZIP_INCLUDE STREQUAL "FASTCAE_QUAZIP_INCLUDE-NOTFOUND")		
	MESSAGE(SEND_ERROR "FASTCAE_QUAZIP_INCLUDE is null, please specified QUAZIP include directory!~")
ENDIF()

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	#Set FastCAE Linux Dependencies Libraries Path
	#VTK
	SET(FASTCAE_VTK_SO_DIR "FASTCAE_VTK_SO_DIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_SO_DIR")
	IF(FASTCAE_VTK_SO_DIR STREQUAL "FASTCAE_VTK_SO_DIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_SO_DIR is null, please specified VTK so directory!~")
	ENDIF()
	
	#OCC
	SET(FASTCAE_OCC_SO_DIR "FASTCAE_OCC_SO_DIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_SO_DIR")
	IF(FASTCAE_OCC_SO_DIR STREQUAL "FASTCAE_OCC_SO_DIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_OCC_SO_DIR is null, please specified OCC so directory!~")
	ENDIF()
	
	#CGNS	
	SET(FASTCAE_CGNS_SO_DIR "FASTCAE_CGNS_SO_DIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_SO_DIR")
	IF(FASTCAE_CGNS_SO_DIR STREQUAL "FASTCAE_CGNS_SO_DIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_CGNS_SO_DIR is null, please specified OCC so directory!~")
	ENDIF()
	
	#QUAZIP
	SET(FASTCAE_QUAZIP_SO_DIR "FASTCAE_QUAZIP_SO_DIR-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_SO_DIR")
	IF(FASTCAE_QUAZIP_SO_DIR STREQUAL "FASTCAE_QUAZIP_SO_DIR-NOTFOUND")		
		MESSAGE(FATAL_ERROR "FASTCAE_QUAZIP_SO_DIR is null, please specified QUAZIP so directory!~")
	ENDIF()
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	#Set FastCAE Windows Dependencies Libraries Path
	#VTK
	SET(FASTCAE_VTK_LIBDIR "FASTCAE_VTK_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_LIBDIR")
	SET(FASTCAE_VTK_LIBDDIR "FASTCAE_VTK_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_LIBDDIR")
	SET(FASTCAE_VTK_BINDIR "FASTCAE_VTK_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_BINDIR")
	SET(FASTCAE_VTK_BINDDIR "FASTCAE_VTK_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_VTK_BINDDIR")
	
	IF(FASTCAE_VTK_LIBDIR STREQUAL "FASTCAE_VTK_LIBDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_LIBDIR is null, please specified VTK lib directory!~")
	ENDIF()
	IF(FASTCAE_VTK_LIBDDIR STREQUAL "FASTCAE_VTK_LIBDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_LIBDDIR is null, please specified VTK libd directory!~")
	ENDIF()
	IF(FASTCAE_VTK_BINDIR STREQUAL "FASTCAE_VTK_BINDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_BINDIR is null, please specified VTK bin directory!~")
	ENDIF()
	IF(FASTCAE_VTK_BINDDIR STREQUAL "FASTCAE_VTK_BINDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_VTK_BINDDIR is null, please specified VTK bind directory!~")
	ENDIF()
	
	#OCC
	SET(FASTCAE_OCC_LIBDIR "FASTCAE_OCC_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_LIBDIR")
	SET(FASTCAE_OCC_LIBDDIR "FASTCAE_OCC_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_LIBDDIR")
	SET(FASTCAE_OCC_BINDIR "FASTCAE_OCC_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_BINDIR")
	SET(FASTCAE_OCC_BINDDIR "FASTCAE_OCC_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_OCC_BINDDIR")

	IF(FASTCAE_OCC_LIBDIR STREQUAL "FASTCAE_OCC_LIBDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_OCC_LIBDIR is null, please specified OCC lib directory!~")
	ENDIF()
	IF(FASTCAE_OCC_LIBDDIR STREQUAL "FASTCAE_OCC_LIBDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_OCC_LIBDDIR is null, please specified OCC libd directory!~")
	ENDIF()
	IF(FASTCAE_OCC_BINDIR STREQUAL "FASTCAE_OCC_BINDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_OCC_BINDIR is null, please specified OCC bin directory!~")
	ENDIF()
	IF(FASTCAE_OCC_BINDDIR STREQUAL "FASTCAE_OCC_BINDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_OCC_BINDDIR is null, please specified OCC bind directory!~")
	ENDIF()
	
	#CGNS
	SET(FASTCAE_CGNS_LIBDIR "FASTCAE_CGNS_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_LIBDIR")
	SET(FASTCAE_CGNS_LIBDDIR "FASTCAE_CGNS_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_LIBDDIR")
	SET(FASTCAE_CGNS_BINDIR "FASTCAE_CGNS_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_BINDIR")
	SET(FASTCAE_CGNS_BINDDIR "FASTCAE_CGNS_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_CGNS_BINDDIR")	
	
	IF(FASTCAE_CGNS_LIBDIR STREQUAL "FASTCAE_CGNS_LIBDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_CGNS_LIBDIR is null, please specified CGNS lib directory!~")
	ENDIF()
	IF(FASTCAE_CGNS_LIBDDIR STREQUAL "FASTCAE_CGNS_LIBDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_CGNS_LIBDDIR is null, please specified CGNS libd directory!~")
	ENDIF()
	IF(FASTCAE_CGNS_BINDIR STREQUAL "FASTCAE_CGNS_BINDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_CGNS_BINDIR is null, please specified CGNS bin directory!~")
	ENDIF()
	IF(FASTCAE_CGNS_BINDDIR STREQUAL "FASTCAE_CGNS_BINDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_CGNS_BINDDIR is null, please specified CGNS bind directory!~")
	ENDIF()
	
	#QUAZIP
	SET(FASTCAE_QUAZIP_LIBDIR "FASTCAE_QUAZIP_LIBDIR-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_LIBDIR")
	SET(FASTCAE_QUAZIP_LIBDDIR "FASTCAE_QUAZIP_LIBDDIR-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_LIBDDIR")
	SET(FASTCAE_QUAZIP_BINDIR "FASTCAE_QUAZIP_BINDIR-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_BINDIR")
	SET(FASTCAE_QUAZIP_BINDDIR "FASTCAE_QUAZIP_BINDDIR-NOTFOUND" CACHE PATH "FASTCAE_QUAZIP_BINDDIR")	
	
	IF(FASTCAE_QUAZIP_LIBDIR STREQUAL "FASTCAE_QUAZIP_LIBDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_QUAZIP_LIBDIR is null, please specified QUAZIP lib directory!~")
	ENDIF()
	IF(FASTCAE_QUAZIP_LIBDDIR STREQUAL "FASTCAE_QUAZIP_LIBDDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_QUAZIP_LIBDDIR is null, please specified QUAZIP libd directory!~")
	ENDIF()
	IF(FASTCAE_QUAZIP_BINDIR STREQUAL "FASTCAE_QUAZIP_BINDIR-NOTFOUND")		
		MESSAGE(SEND_ERROR "FASTCAE_QUAZIP_BINDIR is null, please specified QUAZIP bin directory!~")
	ENDIF()
	IF(FASTCAE_QUAZIP_BINDDIR STREQUAL "FASTCAE_QUAZIP_BINDDIR-NOTFOUND")		
		MESSAGE(FATAL_ERROR "FASTCAE_QUAZIP_BINDDIR is null, please specified QUAZIP bind directory!~")
	ENDIF()	
ENDIF()

SET(CMAKE_DEBUG_POSTFIX "")
SET(CMAKE_RELEASE_POSTFIX "")
SET(FASTCAE_OUTPUT_DIR ${PROJECT_SOURCE_DIR}/../output)

FILE(GLOB FASTCAE_PYS ${PROJECT_SOURCE_DIR}/python/Py/*.py)
FILE(GLOB FASTCAE_INIS ${PROJECT_SOURCE_DIR}/python/Py/*.ini)

IF(CMAKE_SYSTEM_NAME MATCHES "Linux")
	IF(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
		SET(CMAKE_BUILD_TYPE Debug CACHE STRING "Choose the type of build." FORCE)
		SET_PROPERTY(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release")
	ENDIF()
	
	FILE(GLOB FASTCAE_VTK_SOS_0 "${FASTCAE_VTK_SO_DIR}/*.so")
	FILE(GLOB FASTCAE_VTK_SOS_1 "${FASTCAE_VTK_SO_DIR}/*.so.1")
	FILE(GLOB FASTCAE_VTK_SOS_2 "${FASTCAE_VTK_SO_DIR}/*.so.9.0.1")	
	FILE(GLOB FASTCAE_OCC_SOS_0 "${FASTCAE_OCC_SO_DIR}/*.so")
	FILE(GLOB FASTCAE_OCC_SOS_1 "${FASTCAE_OCC_SO_DIR}/*.so.7")	
	FILE(GLOB FASTCAE_OCC_SOS_2 "${FASTCAE_OCC_SO_DIR}/*.so.7.5.0")	
	FILE(GLOB FASTCAE_CGNS_SOS_0 "${FASTCAE_CGNS_SO_DIR}/*.so")
	FILE(GLOB FASTCAE_CGNS_SOS_1 "${FASTCAE_CGNS_SO_DIR}/*.so.4.2")	
	FILE(GLOB FASTCAE_CGNS_SOS_2 "${FASTCAE_CGNS_SO_DIR}/*.so.200")
	FILE(GLOB FASTCAE_CGNS_SOS_3 "${FASTCAE_CGNS_SO_DIR}/*.so.200.0.0")
	FILE(GLOB FASTCAE_QUAZIP_SOS_0 "${FASTCAE_QUAZIP_SO_DIR}/*.so")
	FILE(GLOB FASTCAE_QUAZIP_SOS_1 "${FASTCAE_QUAZIP_SO_DIR}/*.so.1")
	FILE(GLOB FASTCAE_QUAZIP_SOS_2 "${FASTCAE_QUAZIP_SO_DIR}/*.so.1.0")

	FILE(MAKE_DIRECTORY ${FASTCAE_OUTPUT_DIR}/bin/gmsh)	
	FILE(COPY ${PROJECT_SOURCE_DIR}/Gmsh/gmsh454/gmsh
			  ${PROJECT_SOURCE_DIR}/Gmsh/gmsh454/gmsh.Geo
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin/gmsh)
			  
	FILE(COPY ${FASTCAE_OUTPUT_DIR}/python37/lib/libpython3.7m.so.1.0 
			  ${FASTCAE_VTK_SOS_1}
			  ${FASTCAE_VTK_SOS_2}	 
			  ${FASTCAE_OCC_SOS_1}
			  ${FASTCAE_OCC_SOS_2}	
			  ${FASTCAE_CGNS_SOS_0}			  
			  ${FASTCAE_CGNS_SOS_1}			  
			  ${FASTCAE_CGNS_SOS_2}	
			  ${FASTCAE_CGNS_SOS_3}		  
			  ${FASTCAE_QUAZIP_SOS_1}
			  ${FASTCAE_QUAZIP_SOS_2}
			  ${FASTCAE_PYS}
			  ${FASTCAE_INIS}
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin)		  
ELSEIF(CMAKE_SYSTEM_NAME MATCHES "Windows")	
	FILE(GLOB FASTCAE_VTK_LIBDS "${FASTCAE_VTK_LIBDDIR}/*.lib")
	FILE(GLOB FASTCAE_VTK_LIBS "${FASTCAE_VTK_LIBDIR}/*.lib")
	FILE(GLOB FASTCAE_VTK_BINDS "${FASTCAE_VTK_BINDDIR}/*.dll")
	FILE(GLOB FASTCAE_VTK_BINS "${FASTCAE_VTK_BINDIR}/*.dll")
	FILE(GLOB FASTCAE_OCC_LIBDS "${FASTCAE_OCC_LIBDDIR}/*.lib")	
	FILE(GLOB FASTCAE_OCC_LIBS "${FASTCAE_OCC_LIBDIR}/*.lib")	
	FILE(GLOB FASTCAE_OCC_BINDS "${FASTCAE_OCC_BINDDIR}/*.dll")	
	FILE(GLOB FASTCAE_OCC_BINS "${FASTCAE_OCC_BINDIR}/*.dll")
	FILE(GLOB FASTCAE_CGNS_LIBDS "${FASTCAE_CGNS_LIBDDIR}/*.lib")
	FILE(GLOB FASTCAE_CGNS_LIBS "${FASTCAE_CGNS_LIBDIR}/*.lib")
	FILE(GLOB FASTCAE_CGNS_BINDS "${FASTCAE_CGNS_BINDDIR}/*.dll")
	FILE(GLOB FASTCAE_CGNS_BINS "${FASTCAE_CGNS_BINDIR}/*.dll")
	FILE(GLOB FASTCAE_QUAZIP_LIBDS "${FASTCAE_QUAZIP_LIBDDIR}/*.lib")
	FILE(GLOB FASTCAE_QUAZIP_LIBS "${FASTCAE_QUAZIP_LIBDIR}/*.lib")
	FILE(GLOB FASTCAE_QUAZIP_BINDS "${FASTCAE_QUAZIP_BINDDIR}/*.dll")
	FILE(GLOB FASTCAE_QUAZIP_BINS "${FASTCAE_QUAZIP_BINDIR}/*.dll")
	
	FILE(MAKE_DIRECTORY ${FASTCAE_OUTPUT_DIR}/bin_d/gmsh 
						${FASTCAE_OUTPUT_DIR}/bin_d/translations 
						${FASTCAE_OUTPUT_DIR}/bin/gmsh 
						${FASTCAE_OUTPUT_DIR}/bin/translations)	

	FILE(COPY ${PROJECT_SOURCE_DIR}/Gmsh/gmsh454/gmsh.Geo
			  ${PROJECT_SOURCE_DIR}/Gmsh/gmsh454/gmsh.exe
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin_d/gmsh)		  
	FILE(COPY ${PROJECT_SOURCE_DIR}/Gmsh/gmsh454/gmsh.Geo
			  ${PROJECT_SOURCE_DIR}/Gmsh/gmsh454/gmsh.exe
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin/gmsh)
			
	FILE(COPY ${FASTCAE_OUTPUT_DIR}/python37/python37.dll
			  ${FASTCAE_VTK_BINDS}
			  ${FASTCAE_OCC_BINDS}
			  ${FASTCAE_CGNS_BINDS}
			  ${FASTCAE_QUAZIP_BINDS}  
			  ${Qt5_DIR}/../../../bin/Qt5Widgetsd.dll
			  ${Qt5_DIR}/../../../bin/Qt5Guid.dll
			  ${Qt5_DIR}/../../../bin/Qt5Cored.dll
			  ${Qt5_DIR}/../../../bin/Qt5Xmld.dll
			  ${Qt5_DIR}/../../../bin/Qt5Networkd.dll
			  ${Qt5_DIR}/../../../bin/Qt5WebChanneld.dll
			  ${Qt5_DIR}/../../../bin/Qt5Quickd.dll
			  ${Qt5_DIR}/../../../bin/Qt5Qmld.dll
			  ${Qt5_DIR}/../../../bin/Qt5WebEngineCored.dll
			  ${Qt5_DIR}/../../../bin/Qt5WebEngineWidgetsd.dll
			  ${Qt5_DIR}/../../../bin/Qt5WebViewd.dll
			  ${Qt5_DIR}/../../../bin/Qt5QuickWidgetsd.dll
			  ${Qt5_DIR}/../../../bin/Qt5QmlModelsd.dll
			  ${Qt5_DIR}/../../../bin/Qt5PrintSupportd.dll
			  ${Qt5_DIR}/../../../bin/Qt5Positioningd.dll
			  ${Qt5_DIR}/../../../bin/QtWebEngineProcessd.exe 
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin_d)
	FILE(COPY ${FASTCAE_OUTPUT_DIR}/python37/python37.dll
			  ${FASTCAE_VTK_BINS}
			  ${FASTCAE_OCC_BINS}
			  ${FASTCAE_CGNS_BINS}
			  ${FASTCAE_QUAZIP_BINS}
			  ${Qt5_DIR}/../../../bin/Qt5Widgets.dll
			  ${Qt5_DIR}/../../../bin/Qt5Gui.dll
			  ${Qt5_DIR}/../../../bin/Qt5Core.dll
			  ${Qt5_DIR}/../../../bin/Qt5Xml.dll
			  ${Qt5_DIR}/../../../bin/Qt5Network.dll
			  ${Qt5_DIR}/../../../bin/Qt5WebChannel.dll
			  ${Qt5_DIR}/../../../bin/Qt5Quick.dll
			  ${Qt5_DIR}/../../../bin/Qt5Qml.dll
			  ${Qt5_DIR}/../../../bin/Qt5WebEngineCore.dll
			  ${Qt5_DIR}/../../../bin/Qt5WebEngineWidgets.dll
			  ${Qt5_DIR}/../../../bin/Qt5WebView.dll
			  ${Qt5_DIR}/../../../bin/Qt5QuickWidgets.dll
			  ${Qt5_DIR}/../../../bin/Qt5QmlModels.dll
			  ${Qt5_DIR}/../../../bin/Qt5PrintSupport.dll
			  ${Qt5_DIR}/../../../bin/Qt5Positioning.dll
			  ${Qt5_DIR}/../../../bin/QtWebEngineProcess.exe 
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin)
	
	FILE(COPY ${Qt5_DIR}/../../../plugins/platforms 
			  ${Qt5_DIR}/../../../resources
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin_d)
	FILE(COPY ${Qt5_DIR}/../../../plugins/platforms 
			  ${Qt5_DIR}/../../../resources
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin)
			
	FILE(COPY ${Qt5_DIR}/../../../translations/qtwebengine_locales 
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin_d/translations)
	FILE(COPY ${Qt5_DIR}/../../../translations/qtwebengine_locales 
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin/translations)
	
	FILE(COPY ${FASTCAE_PYS}
			  ${FASTCAE_INIS}
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin_d)
	FILE(COPY ${FASTCAE_PYS}
			  ${FASTCAE_INIS}
			  DESTINATION ${FASTCAE_OUTPUT_DIR}/bin)
ENDIF()

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)
ADD_SUBDIRECTORY(SolutionDataIO)
SET_PROPERTY(TARGET SolutionDataIO PROPERTY FOLDER "Post")

ADD_SUBDIRECTORY(CurveAnalyse)
SET_PROPERTY(TARGET CurveAnalyse PROPERTY FOLDER "Post")

ADD_SUBDIRECTORY(HeuDataSrcIO)
SET_PROPERTY(TARGET HeuDataSrcIO PROPERTY FOLDER "Post")

ADD_SUBDIRECTORY(GraphicsAnalyse)
SET_PROPERTY(TARGET GraphicsAnalyse PROPERTY FOLDER "Post")

ADD_SUBDIRECTORY(SARibbonBar)
SET_PROPERTY(TARGET SARibbonBar PROPERTY FOLDER "FastCAE Platform")

IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	ADD_SUBDIRECTORY(XGenerateReport)
	SET_PROPERTY(TARGET XGenerateReport PROPERTY FOLDER "FastCAE Platform")
ENDIF()

ADD_SUBDIRECTORY(settings)
SET_PROPERTY(TARGET Settings PROPERTY FOLDER "FastCAE Platform")

IF(CMAKE_SYSTEM_NAME MATCHES "Windows")
	ADD_SUBDIRECTORY(License)
	SET_PROPERTY(TARGET License PROPERTY FOLDER "FastCAE Platform")
ENDIF()

ADD_SUBDIRECTORY(python)
SET_PROPERTY(TARGET PythonModule PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(UserGuidence)
SET_PROPERTY(TARGET UserGuidence PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(DataProperty)
SET_PROPERTY(TARGET DataProperty PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(meshData)
SET_PROPERTY(TARGET MeshData PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(geometry)
SET_PROPERTY(TARGET Geometry PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(BCBase)
SET_PROPERTY(TARGET BCBase PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(SelfDefObject)
SET_PROPERTY(TARGET SelfDefObject PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(Material)
SET_PROPERTY(TARGET Material PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(ConfigOptions)
SET_PROPERTY(TARGET ConfigOptions PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(ParaClassFactory)
SET_PROPERTY(TARGET ParaClassFactory PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(ModelData)
SET_PROPERTY(TARGET ModelData PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(moduleBase)
SET_PROPERTY(TARGET ModuleBase PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(PluginManager)
SET_PROPERTY(TARGET PluginManager PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(PostWidgets)
SET_PROPERTY(TARGET PostWidgets PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(GeometryDataExchange)
SET_PROPERTY(TARGET GeometryDataExchange PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(GeometryCommand)
SET_PROPERTY(TARGET GeometryCommand PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(GeometryWidgets)
SET_PROPERTY(TARGET GeometryWidgets PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(Gmsh)
SET_PROPERTY(TARGET GmshModule PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(ProjectTree)
SET_PROPERTY(TARGET ProjectTree PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(ProjectTreeExtend)
SET_PROPERTY(TARGET ProjectTreeExtend PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(IO)
SET_PROPERTY(TARGET IO PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(SolverControl)
SET_PROPERTY(TARGET SolverControl PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(MainWidgets)
SET_PROPERTY(TARGET MainWidgets PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(mainWindow)
SET_PROPERTY(TARGET MainWindow PROPERTY FOLDER "FastCAE Platform")

ADD_SUBDIRECTORY(PluginCustomizer)
SET_PROPERTY(TARGET PluginCustomizer PROPERTY FOLDER "Plugin")

ADD_SUBDIRECTORY(PluginMeshDataExchange)
SET_PROPERTY(TARGET PluginMeshDataExchange PROPERTY FOLDER "Plugin")

ADD_SUBDIRECTORY(main)
SET_PROPERTY(TARGET FastCAE PROPERTY FOLDER "FastCAE Platform")