CMAKE_MINIMUM_REQUIRED(VERSION 3.18.1 FATAL_ERROR)
SET(PROJECTNAME CurveAnalyse)
PROJECT(${PROJECTNAME})
ADD_DEFINITIONS("-DCURVEANALYSE_LIB")
#SET_PROPERTY(TARGET ${PROJECTNAME} PROPERTY FOLDER "Post")

#Qt
IF(NOT DEFINED Qt5_DIR)
	SET(Qt5_DIR "Qt5_DIR-NOTFOUND" CACHE PATH "Qt5_DIR")
	MESSAGE(FATAL_ERROR "Qt5_DIR is null, please find Qt5_config.cmake file position!~")
ENDIF()

#FILE(GLOB CurveAnalyse_TS_FILE "${TOP_PROJECT_SOURCE_DIR}/CurveAnalyse/translations/*.ts")
FILE(GLOB SRC_QRC_FILES "*.qrc")
FILE(GLOB SRC_UI_FILES "*.ui")
FILE(GLOB SRC_H_FILES "*.h")
FILE(GLOB SRC_CPP_FILES "*.cpp")

#SET_SOURCE_FILES_PROPERTIES(${CurveAnalyse_TS_FILE} PROPERTIES OUTPUT_LOCATION "${TOP_PROJECT_SOURCE_DIR}/CurveAnalyse/translations")
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${TOP_PROJECT_SOURCE_DIR}/../output/bin_d)    
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${TOP_PROJECT_SOURCE_DIR}/../output/bin) 
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${TOP_PROJECT_SOURCE_DIR}/../output/bin_d)   
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${TOP_PROJECT_SOURCE_DIR}/../output/bin) 

INCLUDE_DIRECTORIES(${TOP_PROJECT_SOURCE_DIR})

#FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets PrintSupport LinguistTools REQUIRED)
FIND_PACKAGE(Qt5 COMPONENTS Core Gui Widgets PrintSupport REQUIRED)
#QT5_CREATE_TRANSLATION(CurveAnalyse_QM_FILE ${PROJECT_SOURCE_DIR} ${CurveAnalyse_TS_FILE} OPTIONS -noobsolete)
QT5_ADD_RESOURCES(SRC_Generated_QRC_FILES ${SRC_QRC_FILES})
QT5_WRAP_UI(SRC_Generated_UI_FILES ${SRC_UI_FILES})
SET(CMAKE_AUTOMOC ON)

#SOURCE_GROUP("Translation" FILES ${CurveAnalyse_TS_FILE} ${CurveAnalyse_QM_FILE})
SOURCE_GROUP("rc" FILES ${SRC_Generated_QRC_FILES} ${SRC_QRC_FILES})
SOURCE_GROUP("Ui" FILES ${SRC_Generated_UI_FILES} ${SRC_UI_FILES})
SOURCE_GROUP("Generated Files" FILES "${TOP_PROJECT_BINARY_DIR}/${PROJECTNAME}/${PROJECTNAME}_autogen/mocs_compilation.cpp")

ADD_LIBRARY(${PROJECTNAME} SHARED #${CurveAnalyse_TS_FILE}
								  #${CurveAnalyse_QM_FILE}								  
								  ${SRC_Generated_QRC_FILES}
								  ${SRC_Generated_UI_FILES}
								  ${SRC_H_FILES}
								  ${SRC_CPP_FILES})
									
TARGET_LINK_LIBRARIES(${PROJECTNAME} Qt5::PrintSupport Qt5::Core Qt5::Gui Qt5::Widgets)
ADD_DEPENDENCIES(${PROJECTNAME} SolutionDataIO)